--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,11 @@ limitations under the License.
       <artifactId>junit</artifactId>
       <version>1.19</version>
     </dependency>
+    <dependency>
+      <groupId>org.jenkins-ci.plugins</groupId>
+      <artifactId>structs</artifactId>
+      <version>1.10</version>
+    </dependency>
       <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>git</artifactId>
