Use semantic versioning in release drafter
As only $MAJOR.$MINOR is used in parent config [1].

[1] https://github.com/jenkinsci/.github/blob/master/.github/release-drafter.yml

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,2 +1,4 @@
 _extends: .github
-tag-template: flaky-test-handler-$NEXT_MINOR_VERSION
+name-template: $NEXT_PATCH_VERSION
+tag-template: $NEXT_PATCH_VERSION
+version-template: $MAJOR.$MINOR.$PATCH
