--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,8 @@ limitations under the License.
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <!-- Baseline Jenkins version you use to build the plugin. Users must have this version or newer to run. -->
-    <jenkins.version>2.277.1</jenkins.version>
+    <jenkins.version>2.263.1</jenkins.version>
+    <no-test-jar>false</no-test-jar>
     <java.level>8</java.level>
   </properties>
 
