--- a/pom.xml
+++ b/pom.xml
@@ -109,9 +109,16 @@ limitations under the License.
       <version>3.9.0</version>
     </dependency>
     <dependency>
+      <groupId>org.jenkins-ci.plugins</groupId>
+      <artifactId>script-security</artifactId>
+      <version>1.77</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.kohsuke</groupId>
       <artifactId>access-modifier-suppressions</artifactId>
       <version>1.16</version>
+      <scope>test</scope>
     </dependency>
     <!-- for workflow support -->
     <dependency>
