--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@ limitations under the License.
   <artifactId>flaky-test-handler</artifactId>
   <name>Flaky Test Handler plugin</name>
   <description>Display rerun flaky tests</description>
-  <version>1.2.1</version>
+  <version>1.2.2-SNAPSHOT</version>
   <packaging>hpi</packaging>
   <url>https://github.com/jenkinsci/flaky-test-handler-plugin</url>
 
@@ -132,7 +132,7 @@ limitations under the License.
     <connection>scm:git:ssh://github.com/jenkinsci/flaky-test-handler-plugin.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/jenkinsci/flaky-test-handler-plugin.git</developerConnection>
     <url>https://github.com/jenkinsci/flaky-test-handler-plugin</url>
-    <tag>flaky-test-handler-1.2.1</tag>
+    <tag>flaky-test-handler-1.0.1</tag>
   </scm>
 
 </project>
