--- a/pom.xml
+++ b/pom.xml
@@ -131,7 +131,7 @@ limitations under the License.
   </dependencies>
 
   <scm>
-    <connection>scm:git:ssh://github.com/${gitHubRepo}.git</connection>
+    <connection>scm:git:https://github.com/${gitHubRepo}.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/${gitHubRepo}.git</developerConnection>
     <url>https://github.com/${gitHubRepo}</url>
     <tag>${scmTag}</tag>
